[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fraud-detection"
version = "0.1.0"
description = "Real-time fraud detection with anomaly scoring and drift monitoring"
requires-python = ">=3.11"

dependencies = [
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "pandas>=2.1",
    "numpy>=1.26",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "mlflow>=2.12",
    "evidently>=0.4",
    "streamlit>=1.33",
    "joblib>=1.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "ipykernel>=6.29",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]